@@ -1,4 +1,2 @@
-plugin.video.lacosa
-=============
-
-Kodi unofficial plugin for La Cosa (tested on Kodi 15.2 Isengard).
+# plugin.video.lacosa
+Kodi unofficial plugin for La Cosa.
