@@ -1,3 +1,7 @@
+[B]Version 1.0.10[/B]
+- Replaced dialog boxes with notifications.
+- Small improvements.
+
 [B]Version 1.0.9[/B]
 - Fixed bug that doesn't allow to reproduce video correctly.
 
